--- a/styles/scss/partials/_useProfessionals.scss
+++ b/styles/scss/partials/_useProfessionals.scss
@@ -61,3 +61,12 @@
         bottom: 0;
     }
 }
+
+.use-pro__content--subheading {
+    margin: 50px 0;
+}
+
+.use-pro__content--btn {
+    margin-top: 50px;
+    width: 100px;
+}
