--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -12,3 +12,10 @@
 @import './partials/considerRehab';
 @import './partials/useProfessionals';
 @import './partials/footer';
+@import './partials/modals';
+@import './partials/contact';
+@import './partials/whiteContainer';
+@import './partials/adminMessage';
+@import './partials/about';
+@import './partials/admin';
+@import './partials/service';
