--- a/styles/scss/partials/_considerRehab.scss
+++ b/styles/scss/partials/_considerRehab.scss
@@ -52,6 +52,7 @@
 
 .consider-rehab__card--heading {
     display: flex;
+    align-items: flex-end;
 }
 
 .consider-rehab__card--number {
@@ -71,9 +72,10 @@
 
 .consider-rehab__img {
     width: 80%;
-    max-width: 300px;
+    max-width: 200px;
     height: auto;
     position: relative;
+    left: 100px;
     bottom: 50px;
     z-index: 1;
     transform: scaleX(-1);
@@ -87,12 +89,15 @@
         position: absolute;
         max-width: 300px;
         width: 100%;
-        right: 10%;
-        // top: 50px;
+        left: 60%;
     }
 
     @include respond-to('large') {
         max-width: 370px;
-        right: 15%;
+        left: 58%;
     }
+}
+
+.consider-rehab__btn {
+    width: 100px;
 }
