--- a/styles/scss/partials/_form.scss
+++ b/styles/scss/partials/_form.scss
@@ -6,20 +6,38 @@ fieldset {
     border: 1px solid transparent;
 }
 
-.form input {
+.form input, textarea, .contact__dropdown {
     border: 0px;
     border-bottom: 1px solid #000;
     padding: 3px;
     height: 38px;
 }
 
-textarea:focus, input:focus{
+textarea:focus, input:focus {
     outline: none;
 }
 
 .input:focus {
     border: 0px;
     border-bottom: 2px solid #000;
+}
+
+.input__required {
+    color: $dark-blue;
+    opacity: 0.7;
+}
+
+.contact__dropdown:hover {
+    background-color: $light-blue;
+}
+
+// Error/success
+.red-border {
+    border-bottom: 2px solid $error !important;
+}
+
+.green-border {
+    border-bottom: 2px solid $success !important;
 }
 
 // Login
