--- a/styles/scss/partials/_login.scss
+++ b/styles/scss/partials/_login.scss
@@ -1,22 +1,64 @@
 .login {
     position: relative;
     z-index: 1;
-
     padding-bottom: 100px;
 
-    h1 {
-        padding: 50px 0 0 10px;
-    }
+}
+ 
+.login__text {
+    margin: 50px 0 0 10px;
 
-    p {
-        width: 80%;
-        margin-left: 10px;
+    @include respond-to('medium') {
+        max-width: 300px;
+        margin: 50px 0 0 50px;
     }
-
 }
 
-.login__form-container {
-        position: relative;
+.login__text--p {
+    width: 100%;
+}
+
+.login__white-container {
         z-index: 2;
         bottom: 100px;
+        margin: 10px 5px;
+
+        @include respond-to('small') {
+            max-width: 55%;
+            margin: 10px auto;
+        }
+
+        @include respond-to('medium') {
+            position: absolute;
+            left: 150px;
+            bottom: 300px;
+        }
+}
+
+.login__input {
+    width: 100%;
+    margin: 10px 0;
+    max-width: 250px;
+}
+
+.login__btn {
+    background-color: $orange;
+    width: 100%;
+}
+
+.login__btn:hover {
+    background-color: $dark-blue;
+    color: #FFF;
+    border: 2px solid $dark-blue;
+    font-size: 20px;
+    padding: 5px 0;
+    transform: scale(1);
+}
+
+.form {
+
+    @include respond-to('small') {
+       margin: 20px; 
     }
+    
+}
