--- a/styles/scss/partials/_navigations.scss
+++ b/styles/scss/partials/_navigations.scss
@@ -3,7 +3,6 @@
     position: relative;
     width: 200px;
     max-width: 100%;
-    left: -50px;
     width: 150px;
     z-index: 9;
     cursor: pointer;
@@ -33,7 +32,6 @@
 .hamburger-inactive {
     position: absolute;
     right: 3%;
-    // margin-right: 10px;
 
     @include respond-to('medium') {
         display: none;
@@ -83,11 +81,18 @@
         top: 5px;
     }
 
-    .nav__menu-links a, .nav__menu-links {
+    .nav__menu-links {
+        margin-top: 50px;
+    }
+
+    .nav__menu-links a {
         text-align: center;
-        margin-top: 100px;
         font-size: 24px;
-        margin: 55px 0;
+        padding: 20px 0;
+    }
+
+    .nav__menu-links a:hover {
+        color: #FFF;
     }
 
     .nav__search-option {
@@ -107,11 +112,16 @@
     .nav__phone--icon {
         margin: 0 10px 0 0;
     }
+
+    .active {
+        color: $orange;
+    }
 }
 
 .nav__mobile {
     display: flex;
     justify-content: space-between;
+    margin: 20px auto;
 }
 
 .nav__menu {
@@ -120,7 +130,6 @@
     z-index: 9;
 
     @include respond-to('medium') {
-        position: relative;
         flex-direction: row;
         justify-content: space-between;
         max-width: 80%;
@@ -134,13 +143,13 @@
         @include respond-to('medium') {
             display: flex;
             position: relative;
-            top: 15px;
-            left: 140px;
+            top: 20px;
+            left: 110px;
         }
 
         @include respond-to('large') {
             left: 200px;
-            top: 27.5px;
+            top: 32px;
         }
 
     }
@@ -166,19 +175,15 @@
 
 .nav__contact-options {
     position: relative;
-    top: 10px;
+    top: 15px;
 
     @include respond-to('large') {
-        top: 20px;
+        top: 25px;
     }
 }
 
-.nav__link {
-    margin: 0 20px;
-}
-
-.active {
-    color: red;
+.nav__link a {
+    padding: 0 20px;
 }
 
 // Dropdown
@@ -192,17 +197,19 @@
         max-width: 160px;
         margin: 0 auto;
 
-        border: 1px solid red;
+        // border: 1px solid red;
 
-        @include respond-to('medium') {
-          padding: 0 10px 20px 10px;
-        }
+        // @include respond-to('medium') {
+        //   padding: 0 10px 20px 10px;
+        // }
     }
 
     .dropdown__select--img {
         width: 12px; 
         height: 100%;
         margin: auto 0 auto 5px;
+        position: relative;
+        right: 20px;
     }
 
 
@@ -214,7 +221,7 @@
         background-color: $white;
         width: 100%;
         margin: 0 auto;
-        overflow: scroll;
+        overflow-y: scroll;
         height: 100%;
 
         @include respond-to('medium') {
@@ -225,7 +232,9 @@
             width: 700px;
             overflow: hidden;
             left: -220px;
-            top: 25px;
+            top: 17px;
+
+            border: 1px solid blue;
         }
 
         .dropdown__select {
@@ -234,6 +243,8 @@
                 display: flex;
                 flex-wrap: wrap;
                 margin-top: 50px;
+
+                border: 1px solid red;
             }  
         }
 
@@ -291,4 +302,41 @@
         width: 10px;
         height: 100%;
     }
+}
+
+// User
+.nav__user {
+    margin-top: 40px;
+    width: 100%;
+
+    bordeR: 1px solid red;
+    text-align: center;
+    
+
+    @include respond-to('medium') {
+        right: 10px;
+        top: 10px; 
+        position: absolute;
+        width: 5%;
+        margin-top: 0;
+    }
+     
+}
+.nav__user--img {
+    width: 25px;
+    height: 25px;
+    margin: 0 auto;
+}
+
+.nav__user--log-out {
+    margin-top: 30px;
+    @include respond-to('medium') {
+       position: relative;
+       margin-top: 0;
+    }
+    
+}
+
+.logout {
+    cursor: pointer;
 }
