--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -19,3 +19,9 @@
 @import './partials/about';
 @import './partials/admin';
 @import './partials/service';
+@import './partials/search';
+@import './partials/globalsAdmin';
+
+@import './partials/createService';
+
+
