--- a/styles/scss/partials/_contact.scss
+++ b/styles/scss/partials/_contact.scss
@@ -1,4 +1,6 @@
 .contact__white-container {
+    position: relative;
+    z-index: 5;
     @include respond-to('medium') {
         height: 30%;
         width: 600px;
@@ -40,7 +42,7 @@
     @include respond-to('medium') {
         position: relative;
         max-width: 350px;
-        width: 100%;
+        width: 50%;
         height: 100%;
         margin: auto 0;
         top: 50px;
@@ -50,6 +52,7 @@
         max-width: 500px;
         top: 30px;
         margin: auto 0;
+        width: 70%;
     }
 } 
 
@@ -72,6 +75,7 @@
 // Contact form
 .contact__input-container {
     margin: 25px 10px;
+    width: 100%;
 
     @include respond-to('medium') {
         margin: 5px;
@@ -88,12 +92,16 @@
     width: 90%;
 
     @include respond-to('small') {
-        width: 90%;
+        width: 100%;
     }
 }
 
 .contact__dropdown {
-    width: 100%;
+    width: 90%; 
+
+    @include respond-to('small') {
+        width: 100%;
+    }
 }
 
 .contact__btn {
@@ -127,29 +135,40 @@
 
     @include respond-to('medium') {
         height: 200px;
+        width: 30%;
+    }
+
+    @include respond-to('large') {
+        width: 40%;
     }
 }
 
 .contact__info {
     display: flex;
     margin-left: 10px;
-    margin: -20px 0px -20px 10px;
+    // margin: -20px 0px -20px 10px;
 }
 
 .contact__info--img {
-    min-width: 30px;
-    width: 30px;
-    height: 30px;
+    min-width: 10px;
+    width: 10px;
+    height: 10px;
     min-height: 30px;
     margin: auto 10px auto 0px;
+
+    // @include respond-to()
 }
 
 // SoMe
 .contact__some {
     display: flex;
     justify-content: center;
+    margin: 20px 0;
 
     .some__img {
         margin: 10px 25px;
+        width: 20px;
+        height: 20px;
+        min-width: 20px;
     }
 }
