--- a/styles/scss/partials/_modals.scss
+++ b/styles/scss/partials/_modals.scss
@@ -1,99 +1,165 @@
-.modals {
+.modal-background{
     position: fixed;
     background-color: $dark-blue;
+    opacity: 0.8;
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    opacity: 0.8;
-    // transform: translate(0, 0); 
-
     left: 0;
-    right: 0;
-    bottom: 0;
-    // top: 0;
+    top: 0;
+    // right: 0;
+    // bottom: 0;
+    z-index: 10;
 
-    z-index: 11;
+    border: 1px solid red;
+
 }
 
-.modals-positioning {
-    background-color: #FFF;
+.confirmation-box {
     position: fixed;
-    z-index: 12;
-    top: 0;
-    display: flex;
-    transform: translate(-50%, 70%);
+    background-color: #FFF;
+    transform: translate(-50%, 50%);
     left: 50%;
-    right: 50%;
-    width: 70%;
+    top: 0;
+    z-index: 11;
+    width: 80%;
     height: auto;
+    text-align: center;
+    opacity: 1;
+
+    padding: 80px 10px 20px 10px;
 
     @include respond-to('small') {
-        max-width: 50%;
+        width: 60%;
     }
 
     @include respond-to('medium') {
-        max-width: 40%;
+        width: 40%;
+        padding-top: 110px;
     }
 
     @include respond-to('large') {
-        max-width: 30%;
+        width: 500px;
     }
 }
 
-.modals-box {
-    border: 1px solid red;
-    width: 100%;
-    position: relative;
-    padding: 30px 10px 20px 10px;
-    text-align: center;
-
-    @include respond-to('small') {
-        padding: 70px 20px 30px 20px;
-    }
-
-    @include respond-to('large') {
-        padding: 100px 30px 40px 40px;
-    }
-    
-}
-
-.modals__img {
+.confirmation__img {
     position: absolute;
-    top: 0;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    transform: translate(-50%, 50%);
     left: 50%;
-    right: 50%;
-    transform: translate(-50%, -70%);
-    width: 100px;
-    height: 100px;
+    top: -150px;
 
-    @include respond-to('small') {
-        width: 130px;
-        height: 130px;
-        transform: translate(-50%, -50%);
-    }
-
-    @include respond-to('large') {
+    @include respond-to('medium') {
         width: 200px;
         height: 200px;
+        top: -200px;
+    }
+}
+
+.confirmation__heading--text {
+    margin: 0 0 10px 0;
+
+    @include respond-to('small') {
+        margin-bottom: 20px;
+    }
+}
+
+.confirmation__p {
+    margin: 10px 0;
+
+    @include respond-to('small') {
+        margin: 10px auto 30px auto;
+        width: 100%;
+        max-width: 300px;
     }
 
-    border: 1px solid red;
+    @include respond-to('medium') {
+        margin: 10px auto 30px auto;
+    }
 }
 
-.modal__p {
-    max-width: 80%;
-    margin: 20px auto 30px auto;
+// Success
+.success-btn {
+    background-color: $success;
 
+    &:hover {
+        background-color: #299755;
+        color: #FFF;
+    }
 }
 
-.modals-none {
-    display: none !important;
+.success-box__img {
+
+    &::before {
+        content: "";
+        background-image: url(../../public/images/icons-confirmation/success.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        position: absolute;
+        top: -20px;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        opacity: 0.1;
+    }
 }
 
-// Success 
-// .success {
-//     background-image: url(../../../public/images/icons-confirmation/success-dialog.png);
-//     background-repeat: no-repeat;
-// }
+// Error
+.error-btn {
+    background-color: $error;
+    color: #FFF;
+
+    &:hover {
+        background-color: #a02c35;
+    }
+}
+
+.error-box__img {
+
+    &::before {
+        content: "";
+        background-image: url(../../public/images/icons-confirmation/error.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        position: absolute;
+        top: -20px;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        opacity: 0.1;
+    }
+}
+
+// Delete
+.delete__cancel {
+    background-color: transparent;
+    width: 100%;
+    position: relative;
+    z-index: 10;
+    margin: 20px auto;
+    cursor: pointer;
+}
+
+.delete-box__img {
+
+    &::before {
+        content: "";
+        background-image: url(../../public/images/icons-confirmation/trash.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        position: absolute;
+        top: -20px;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        opacity: 0.1;
+    }
+}
 
 
