--- a/styles/scss/partials/_navigations.scss
+++ b/styles/scss/partials/_navigations.scss
@@ -4,7 +4,6 @@
     width: 200px;
     max-width: 100%;
     width: 150px;
-    z-index: 9;
     cursor: pointer;
 
     @include respond-to('medium') {
@@ -17,12 +16,19 @@
     }
 }
 
+.nav__flex--desktop {
+    @include respond-to('medium') {
+        display: flex;
+    }
+}
+
 .hamburger-active {
-    z-index: 11;
+    z-index: 10;
     margin-left: 50px;
     position: fixed;
     right: 1.9%;
     margin-right: 10px;
+    background-attachment: fixed;
 
     @include respond-to('medium') {
         display: none;
@@ -82,13 +88,19 @@
     }
 
     .nav__menu-links {
-        margin-top: 50px;
+        margin: 50px auto 0 auto;
     }
 
-    .nav__menu-links a {
+    .nav__link {
+        display: flex;
+        justify-content: center;
+    }
+
+    .nav__link a {
         text-align: center;
         font-size: 24px;
         padding: 20px 0;
+        display: inline-block;
     }
 
     .nav__menu-links a:hover {
@@ -98,7 +110,6 @@
     .nav__search-option {
         text-align: center;
         width: 100%;
-        // margin-bottom: 20px;
 
         img {
             margin-bottom: 10px;
@@ -122,19 +133,26 @@
     display: flex;
     justify-content: space-between;
     margin: 20px auto;
+
+    @include respond-to('medium') {
+        display: block;
+        margin: 20px 0;
+
+        position: relative;
+        z-index: 11;
+    }
 }
 
 .nav__menu {
     display: flex;
     flex-direction: column;
-    z-index: 9;
 
     @include respond-to('medium') {
         flex-direction: row;
         justify-content: space-between;
         max-width: 80%;
-        margin: 0 auto;
-        margin-top: 30px;
+        margin: 30px auto;
+        // margin-top: 30px;
     }
 
     .nav__menu-links {
@@ -144,11 +162,14 @@
             display: flex;
             position: relative;
             top: 20px;
+            width: 500px;
             left: 110px;
+
+            border: 1px solid red;
         }
 
         @include respond-to('large') {
-            left: 200px;
+            left: 180px;
             top: 32px;
         }
 
@@ -177,6 +198,11 @@
     position: relative;
     top: 15px;
 
+    @include respond-to('medium') {
+        width: 300px;
+        right: -100px;
+    }
+
     @include respond-to('large') {
         top: 25px;
     }
@@ -196,12 +222,6 @@
         cursor: pointer;
         max-width: 160px;
         margin: 0 auto;
-
-        // border: 1px solid red;
-
-        // @include respond-to('medium') {
-        //   padding: 0 10px 20px 10px;
-        // }
     }
 
     .dropdown__select--img {
@@ -209,7 +229,10 @@
         height: 100%;
         margin: auto 0 auto 5px;
         position: relative;
-        right: 20px;
+
+        @include respond-to('medium') {
+            right: 20px;
+        }
     }
 
 
@@ -219,30 +242,41 @@
 
     .dropdown__down {
         background-color: $white;
-        width: 100%;
+        max-width: 300%;
+        width: 300%;
         margin: 0 auto;
         overflow-y: scroll;
-        height: 100%;
+        height: 500px;
+        margin-left: -100%;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+
+        @include respond-to('small') {
+            width: 350%;
+            max-width: 350%;
+            margin-left: -125%;
+        }
 
         @include respond-to('medium') {
             position: absolute;
-            display: flex;
-            flex-wrap: wrap;
             height: auto;
-            width: 700px;
             overflow: hidden;
-            left: -220px;
             top: 17px;
+            z-index: 12;
 
-            border: 1px solid blue;
+            width: 1000px !important;
+            display: inline-block;
         }
 
         .dropdown__select {
+            overflow-y: scroll;
 
             @include respond-to('medium') {
                 display: flex;
                 flex-wrap: wrap;
-                margin-top: 50px;
+                margin: 25px 0;
+                overflow: hidden;
+
+                // width: 1000px !important;
 
                 border: 1px solid red;
             }  
@@ -250,6 +284,13 @@
 
         .dropdown__option--link {
             max-width: 80%;
+            display: block;
+            margin: 10px auto;
+            transition: ease-in-out 0.3s all;
+
+            &:hover {
+                transform: scale(1.1);
+            } 
 
             @include respond-to('medium') {
                  margin: 15px auto;
@@ -258,8 +299,15 @@
 
         .dropdown__option--link a {
             cursor: pointer;
-
             font-size: 24px;
+
+            &:hover {
+                color: #000;
+            }
+
+            @include respond-to('medium') {
+                font-size: 18px;
+            }
         }
 
         .dropdown__option {
@@ -271,26 +319,47 @@
             position: relative;
 
             @include respond-to('medium') {
-                width: 300px;
+                width: 210px;
+                margin: 0;
             }
         }
 
         .dropdown__option--img {
-            width: 60px;
-            height: 60px;
-            left: 20px;
-            top: 20px;
-            // height: 40%;
+            width: 40px;
+            height: 40px;
+            left: 5px;
+            top: 30px;
             position: absolute;
+
+            @include respond-to('small') {
+                left: 25px;
+                top: 20px;
+                width: 50px;
+                height: 50px;
+            }
+
+            @include respond-to('medium') {
+                left: 10px;
+            }
         }
 
         .dropdown__option--a {
             position: absolute;
-            top: -25px;
-            left: 130px;
+            left: 50px;
+            bottom: 0;
+            display: block;
+            width: 100%;
+            max-width: 200px;
+
+            @include respond-to('small') {
+                left: 100px;
+            }
 
             @include respond-to('medium') {
                 top: 25px;
+                left: 45px;
+                max-width: 165px;
+                height: auto;
             }
         }
 
