--- a/styles/scss/partials/_testimonials.scss
+++ b/styles/scss/partials/_testimonials.scss
@@ -5,7 +5,7 @@
     left: 50%;
     transform: translate( -50%, 0 );
     background-image: url('../../public/images/texture/bricks-texture.svg');
-    background-repeat: repeat-y;
+    background-repeat: repeat;
     background-size: contain;
     position: absolute;
     top: -50px;
