--- a/styles/scss/partials/_whiteContainer.scss
+++ b/styles/scss/partials/_whiteContainer.scss
@@ -1,7 +1,7 @@
 .white-container {
     background-color: #FFF;
     position: relative;
-    z-index: 5;
+    // z-index: 5;
 
     padding: 10px;
 
