--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -21,7 +21,6 @@
 @import './partials/service';
 @import './partials/search';
 @import './partials/globalsAdmin';
-
-@import './partials/createService';
+@import './partials/404';
 
 
