--- a/styles/scss/partials/_about.scss
+++ b/styles/scss/partials/_about.scss
@@ -108,8 +108,6 @@
     max-width: 90%;
     margin: 50px auto;
 
-    border: 1px solid red;
-
     @include respond-to('small') {
         flex-direction: row;
         margin: 100px auto;
@@ -120,10 +118,12 @@
 .about__service-container {
     display: flex;
     flex-direction: column;
-    margin: 0 20px;
+    margin: 0 auto;
     width: 180px;
 
-    border: 1px solid blue;
+    @include respond-to('medium') {
+        margin: 0 20px;
+    }
 }
 
 .about__service--img {
@@ -165,7 +165,7 @@
     }
 }
 
-.about__galler--img {
+.about__gallery--img {
     max-width: 40%;
     margin: 10px;
 
