--- a/styles/scss/partials/_global.scss
+++ b/styles/scss/partials/_global.scss
@@ -101,8 +101,9 @@ body {
 // Update icon
 .update-icon {
     position: absolute;
-    top: 30px;
-    left: 30px;
+    top: 40px;
+    // left: 30px;
+    left: 10px;
     cursor: pointer;
 
     div img {
