--- a/styles/scss/partials/_index.scss
+++ b/styles/scss/partials/_index.scss
@@ -324,6 +324,8 @@ section {
     margin-bottom: -50px;
     width: 120%;
     margin-left: -5%;
+    position: relative;
+    z-index: 3;
 
     @include respond-to('small') {
         margin-top: 100px;
