--- a/styles/scss/partials/_navigations.scss
+++ b/styles/scss/partials/_navigations.scss
@@ -1,4 +1,3 @@
-
 .logo {
     position: relative;
     width: 200px;
@@ -152,7 +151,6 @@
         justify-content: space-between;
         max-width: 80%;
         margin: 30px auto;
-        // margin-top: 30px;
     }
 
     .nav__menu-links {
@@ -164,17 +162,13 @@
             top: 20px;
             width: 500px;
             left: 110px;
-
-            border: 1px solid red;
         }
 
         @include respond-to('large') {
             left: 180px;
             top: 32px;
         }
-
     }
-    
 }
 
 .nav__contact-options, .nav__phone-option {
@@ -225,10 +219,11 @@
     }
 
     .dropdown__select--img {
-        width: 12px; 
-        height: 100%;
+        width: 10px; 
+        height: 10px;
         margin: auto 0 auto 5px;
         position: relative;
+        bottom: 7px;
 
         @include respond-to('medium') {
             right: 20px;
@@ -274,11 +269,7 @@
                 display: flex;
                 flex-wrap: wrap;
                 margin: 25px 0;
-                overflow: hidden;
-
-                // width: 1000px !important;
-
-                border: 1px solid red;
+                overflow: hidden;;
             }  
         }
 
@@ -346,18 +337,19 @@
         .dropdown__option--a {
             position: absolute;
             left: 50px;
-            bottom: 0;
+            bottom: 30px;
             display: block;
             width: 100%;
             max-width: 200px;
 
             @include respond-to('small') {
                 left: 100px;
+                bottom: 40px;
             }
 
             @include respond-to('medium') {
-                top: 25px;
-                left: 45px;
+                top: 35px;
+                left: 75px;
                 max-width: 165px;
                 height: auto;
             }
@@ -377,8 +369,6 @@
 .nav__user {
     margin-top: 40px;
     width: 100%;
-
-    bordeR: 1px solid red;
     text-align: center;
     
 
@@ -391,6 +381,15 @@
     }
      
 }
+
+.nav__user--id, .nav__user--log-out, .search__icon  {
+    transition: ease-in-out 0.3s;
+
+    &:hover {
+        transform: scale(1.2);
+    }
+}
+
 .nav__user--img {
     width: 25px;
     height: 25px;
@@ -399,6 +398,7 @@
 
 .nav__user--log-out {
     margin-top: 30px;
+    
     @include respond-to('medium') {
        position: relative;
        margin-top: 0;
