--- a/styles/scss/partials/_service.scss
+++ b/styles/scss/partials/_service.scss
@@ -1,92 +1,140 @@
-.service__img {
-    max-width: 100%;
-}
-
-.service__img:nth-child(1) {
-    width: 150px;
-    height: auto;
-    // left: 0;
-    // top: 230px;
-    // position: ab2olute;
+.service__img-1 {
+    width: 100%;
+    max-width: 130px;
     position: relative;
-    margin-top: -150px;
-    margin-right: 30px;
-    // bottom: 100px;
-    float: left;
-    z-index: 7;
+    left: -20px;
+    margin-top: 80px;
 
     @include respond-to('small') {
-        border: 1px solid #ff0000;
-        position: absolute;
-        left: 0;
-        top: 300px;
+        float: left;
+        left: -30px;
     }
 
     @include respond-to('medium') {
-        left: 100px;
-    }
-}
-
-.service__img:nth-child(2) {
-    width: 100px;
-    height: auto;
-    position: relative;
-    float: right;
-    z-index: 6;
-    margin-left: 30px;
-
-    @include respond-to('small') {
-        width: 250px;
-        max-height: 200px;
-    }
-}
-
-.service__img:nth-child(3) {
-    width: 70px;
-    height: auto;
-    position: relative;
-    float: right;
-    z-index: 7;
-    top: 60px;
-    left: 60px;
-    // margin-bottom: 60px;
-
-    @include respond-to('small') {
-        width: 150px;
-        top: 140px;
         left: 50px;
-        margin-bottom: 150px;
-        
+    }
+
+    @include respond-to('large') {
+        max-width: 170px;
+    }
+
+}
+
+.service__img-2 {
+    width: 100%;
+    max-width: 150px;
+    position: absolute;
+    right: -30px;
+
+    @include respond-to('small') {
+        max-width: 200px;
+        float: right;
+        top: -150px;
+        right: -50px;
+    }
+
+    @include respond-to('large') {
+        max-width: 300px;
+        right: -150px;
+        top: -300px;
+    }
+}
+
+.service__img-3 {
+    width: 100%;
+    max-width: 100px;
+
+    position: absolute;
+    right: 80px;
+    top: 50px;
+
+    @include respond-to('small') {
+        float: right;
+        top: 0px;
+    }
+
+    @include respond-to('large') {
+        max-width: 200px;
+        top: -50px;
+    }
+
+    @include respond-to('large') {
+        top: -100px;
+    }
+}
+
+.service__imgs-2-3 {
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+    @include respond-to('small') {
+        float: right;
     }
 }
 
 // Text
 .service__h1 {
     padding: 5px;
-    margin: 10px 0;
 
     @include respond-to('small') {
-        margin-left: 170px;
         margin-top: 50px;
+    }
+
+    @include respond-to('medium') {
+        margin-left: 250px;
+    }
+
+    @include respond-to('large') {
+        margin-left: 300px;
     }
 }
 
 .service__short-p {
-    // padding: 250px 5px 0 5px;
-    padding: 5px 5px 80px 5px;
+    width: 95%;
+    margin: 0 auto;
 
     @include respond-to('small') {
         padding: 0;
-        margin-left: 170px;
+    }
+
+    @include respond-to('medium') {
         width: 60%;
+        margin: 0;
+        margin-left: 250px;
+    }
+
+    @include respond-to('large') {
+        width: 40%;
+        margin-left: 300px;
+    }
+}
+
+.service__under-text {
+    margin-bottom: 250px;
+
+    @include respond-to('small') {
+        margin-bottom: 250px;
+    }
+
+    @include respond-to('large') {
+        margin-bottom: 300px;
     }
 }
 
 .service__p {
-    padding-bottom: 100px;
-    margin-top: 50px;
+    margin-top: -30px;
 
     @include respond-to('small')  {
-        max-width: 60%;
+        width: 70%;
+        margin-top: 0;
     }
+
+    @include respond-to('large') {
+        widht: 60%;
+    }
+}
+
+.service__btn {
+    margin: 40px 0;
 }
