--- a/styles/scss/style.css
+++ b/styles/scss/style.css
@@ -44,7 +44,7 @@ p, input, textarea {
 a, button {
   font-family: "Gothic A1";
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .nav__phone-number {
@@ -66,6 +66,13 @@ a, button {
 
 .search__result-container a {
   font-size: 35px;
+}
+
+.not-found__content {
+  color: #fff;
+}
+.not-found__content h1 {
+  color: #fff;
 }
 
 * {
@@ -160,8 +167,8 @@ body .some__img:hover, body .delete:hover {
 
 .update-icon {
   position: absolute;
-  top: 30px;
-  left: 30px;
+  top: 40px;
+  left: 10px;
   cursor: pointer;
 }
 .update-icon div img {
@@ -353,7 +360,6 @@ body .some__img:hover, body .delete:hover {
     top: 20px;
     width: 500px;
     left: 110px;
-    border: 1px solid red;
   }
 }
 @media (min-width: 1200px) {
@@ -413,10 +419,11 @@ body .some__img:hover, body .delete:hover {
   margin: 0 auto;
 }
 .dropdown .dropdown__select--img {
-  width: 12px;
-  height: 100%;
+  width: 10px;
+  height: 10px;
   margin: auto 0 auto 5px;
   position: relative;
+  bottom: 7px;
 }
 @media (min-width: 992px) {
   .dropdown .dropdown__select--img {
@@ -467,7 +474,6 @@ body .some__img:hover, body .delete:hover {
         flex-wrap: wrap;
     margin: 25px 0;
     overflow: hidden;
-    border: 1px solid red;
   }
 }
 .dropdown .dropdown__down .dropdown__option--link {
@@ -535,7 +541,7 @@ body .some__img:hover, body .delete:hover {
 .dropdown .dropdown__down .dropdown__option--a {
   position: absolute;
   left: 50px;
-  bottom: 0;
+  bottom: 30px;
   display: block;
   width: 100%;
   max-width: 200px;
@@ -543,12 +549,13 @@ body .some__img:hover, body .delete:hover {
 @media (min-width: 767px) {
   .dropdown .dropdown__down .dropdown__option--a {
     left: 100px;
+    bottom: 40px;
   }
 }
 @media (min-width: 992px) {
   .dropdown .dropdown__down .dropdown__option--a {
-    top: 25px;
-    left: 45px;
+    top: 35px;
+    left: 75px;
     max-width: 165px;
     height: auto;
   }
@@ -561,7 +568,6 @@ body .some__img:hover, body .delete:hover {
 .nav__user {
   margin-top: 40px;
   width: 100%;
-  bordeR: 1px solid red;
   text-align: center;
 }
 @media (min-width: 992px) {
@@ -572,6 +578,15 @@ body .some__img:hover, body .delete:hover {
     width: 5%;
     margin-top: 0;
   }
+}
+
+.nav__user--id, .nav__user--log-out, .search__icon {
+  -webkit-transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.3s;
+}
+.nav__user--id:hover, .nav__user--log-out:hover, .search__icon:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .nav__user--img {
@@ -960,6 +975,8 @@ section {
   margin-bottom: -50px;
   width: 120%;
   margin-left: -5%;
+  position: relative;
+  z-index: 3;
 }
 @media (min-width: 767px) {
   .index-contact {
@@ -1062,83 +1079,101 @@ section {
   }
 }
 
-.primary-btn a {
-  padding: 10px 20px;
+.primary-btn {
   border-radius: 20px;
-  min-width: 10%;
-  max-width: 150px;
-  text-align: center;
   -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
           box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-@media (min-width: 767px) {
-  .primary-btn a {
-    width: 300px;
-  }
-}
-
-.primary-btn a {
   background-color: #F3A451;
   border: 2px solid #F3A451;
+  display: inline-block;
+  height: 45px;
+  width: 170px;
+  position: relative;
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
 }
-
-.primary-btn a:hover {
-  background-color: #293846;
-  color: #FFF;
-  border: 2px solid #293846;
-  font-size: 20px;
-  padding: 7.5px 15px;
-}
-
-.secondary-btn__container {
-  display: block;
-  position: relative;
-  padding: 0;
-  border: 1px solid red;
-}
-
-.secondary-btn:hover::after {
-  opacity: 1;
-  bottom: 1px;
-}
-
-.secondary-btn {
-  display: block;
+.primary-btn a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+.primary-btn a:hover {
+  font-size: 20px;
+}
+.primary-btn:hover {
+  background-color: #293846;
+  color: #FFF;
+  border: 2px solid #293846;
+}
+.primary-btn:active {
+  -webkit-box-shadow: inset 0 0 10px #000;
+          box-shadow: inset 0 0 10px #000;
+}
+.primary-btn:visited {
+  border: 2px solid #474747;
+}
+
+.secondary-btn {
+  display: inline-block;
   position: relative;
 }
-.secondary-btn::after, .secondary-btn::before {
+.secondary-btn::after {
   content: "";
   position: absolute;
-}
-.secondary-btn::after {
   display: block;
-  bottom: -5px;
+  width: 115%;
   height: 1px;
-  left: 0;
   background-color: #000;
-  opacity: 0;
+  left: 0;
+  bottom: -5px;
   -webkit-transition: ease-in-out 0.3s;
   transition: ease-in-out 0.3s;
-  width: 100%;
+  opacity: 0;
+}
+
+.secondary-btn:hover::after {
+  bottom: 0;
+  opacity: 1;
+  width: 115%;
+}
+
+.secondary-btn__a {
+  width: 110%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  padding-right: 5px;
+}
+
+.secondary-btn__a--text {
+  display: block;
 }
 
 .secondary-btn__img {
-  width: 10px;
-  height: 10px;
-  margin: auto auto auto 2px;
+  position: relative;
+  left: 5%;
   -webkit-transition: ease-in-out 0.3s;
   transition: ease-in-out 0.3s;
 }
 
 .secondary-btn:hover .secondary-btn__img {
-  position: relative;
-  -webkit-transform: translate(10px, 0);
-          transform: translate(10px, 0);
+  left: 13px;
 }
 
 .nav__link--extra .nav__link--extra-a {
@@ -1199,7 +1234,7 @@ section {
 button {
   border: 0px;
   cursor: pointer;
-  padding: 10px 20px;
+  height: 40px;
   border-radius: 20px;
   min-width: 10%;
   max-width: 150px;
@@ -1225,6 +1260,68 @@ button {
 
 .contact-link {
   cursor: pointer;
+}
+
+.not-found__secondary-btn {
+  display: inline-block;
+  position: relative;
+}
+.not-found__secondary-btn::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 115%;
+  height: 1px;
+  background-color: #fff;
+  left: 0;
+  bottom: -5px;
+  -webkit-transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.3s;
+  opacity: 0;
+}
+
+.not-found__secondary-btn:hover::after {
+  bottom: 0;
+  opacity: 1;
+  width: 115%;
+}
+
+.not-found__secondary-btn__a {
+  width: 110%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  padding-right: 5px;
+}
+
+.not-found__secondary-btn__a--text {
+  display: block;
+}
+
+.not-found__secondary-btn__img {
+  position: relative;
+  left: 5%;
+  -webkit-transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.3s;
+}
+
+.not-found__secondary-btn:hover .not-found__secondary-btn__img {
+  left: 13px;
+}
+
+.update-btn {
+  -webkit-transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.3s;
+}
+.update-btn:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .texture {
@@ -1715,20 +1812,26 @@ textarea:focus, input:focus {
 
 .footer__links-container {
   margin: 0 auto 40px auto;
+  text-align: center;
 }
 @media (min-width: 767px) {
   .footer__links-container {
-    margin: 0 50px;
+    margin: 0 30px;
   }
 }
 @media (min-width: 992px) {
   .footer__links-container {
-    margin: 0 90px;
+    margin: 0 40px;
+  }
+}
+@media (min-width: 1200px) {
+  .footer__links-container {
+    margin: 0 60px;
   }
 }
 
 .footer__links {
-  margin: 5px 0;
+  margin: 15px 0;
 }
 
 .footer__some {
@@ -1737,22 +1840,35 @@ textarea:focus, input:focus {
   display: flex;
 }
 
-.footer__some--link {
+.footer__links--SoMe {
   width: 30px;
   height: 30px;
   cursor: pointer;
+  -webkit-transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.3s;
+  margin: 10px auto;
+}
+.footer__links--SoMe:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .footer__contact {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  border: 1px solid blue;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 @media (min-width: 767px) {
   .footer__contact {
-    padding-top: 30px;
+    padding-top: 20px;
   }
+}
+
+.footer__contact--img {
+  margin-right: 10px;
 }
 
 .footer__h3 {
@@ -1975,10 +2091,11 @@ textarea:focus, input:focus {
 
 .contact__h1 {
   margin-left: 10px;
+  margin-top: 50px;
 }
 @media (min-width: 992px) {
   .contact__h1 {
-    margin: -20px 0 -10px 20px;
+    margin: -10px 0 0px 20px;
   }
 }
 
@@ -1999,7 +2116,7 @@ textarea:focus, input:focus {
 @media (min-width: 1200px) {
   .contact__img {
     max-width: 500px;
-    top: 30px;
+    top: 40px;
     margin: auto 0;
     width: 70%;
   }
@@ -2132,6 +2249,28 @@ textarea:focus, input:focus {
   width: 20px;
   height: 20px;
   min-width: 20px;
+}
+
+.contact__circle-info {
+  position: absolute;
+  width: 120px;
+  padding: 30px 0;
+  text-align: center;
+  right: 20px;
+  top: -60px;
+}
+@media (min-width: 992px) {
+  .contact__circle-info {
+    top: -70px;
+    right: -50px;
+    width: 160px;
+    padding: 60px 0;
+  }
+}
+@media (min-width: 992px) {
+  .contact__circle-info p {
+    font-size: 24px;
+  }
 }
 
 .white-container {
@@ -2359,7 +2498,6 @@ textarea:focus, input:focus {
           flex-direction: column;
   max-width: 90%;
   margin: 50px auto;
-  border: 1px solid red;
 }
 @media (min-width: 767px) {
   .about__services {
@@ -2379,9 +2517,13 @@ textarea:focus, input:focus {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 0 20px;
+  margin: 0 auto;
   width: 180px;
-  border: 1px solid blue;
+}
+@media (min-width: 992px) {
+  .about__service-container {
+    margin: 0 20px;
+  }
 }
 
 .about__service--img {
@@ -2427,12 +2569,12 @@ textarea:focus, input:focus {
   }
 }
 
-.about__galler--img {
+.about__gallery--img {
   max-width: 40%;
   margin: 10px;
 }
 @media (min-width: 992px) {
-  .about__galler--img {
+  .about__gallery--img {
     max-width: 30%;
   }
 }
@@ -2489,7 +2631,7 @@ textarea:focus, input:focus {
 }
 
 .admin__message-container {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .admin__message--empty {
@@ -2561,96 +2703,161 @@ textarea:focus, input:focus {
   margin: 0;
 }
 
-.service__img {
-  max-width: 100%;
-}
-
-.service__img:nth-child(1) {
-  width: 150px;
-  height: auto;
+.service__img-1 {
+  width: 100%;
+  max-width: 130px;
   position: relative;
-  margin-top: -150px;
-  margin-right: 30px;
-  float: left;
-  z-index: 7;
+  left: -20px;
+  margin-top: 80px;
 }
 @media (min-width: 767px) {
-  .service__img:nth-child(1) {
-    border: 1px solid #ff0000;
-    position: absolute;
-    left: 0;
-    top: 300px;
+  .service__img-1 {
+    float: left;
+    left: -30px;
   }
 }
 @media (min-width: 992px) {
-  .service__img:nth-child(1) {
-    left: 100px;
-  }
-}
-
-.service__img:nth-child(2) {
-  width: 100px;
-  height: auto;
-  position: relative;
-  float: right;
-  z-index: 6;
-  margin-left: 30px;
-}
-@media (min-width: 767px) {
-  .service__img:nth-child(2) {
-    width: 250px;
-    max-height: 200px;
-  }
-}
-
-.service__img:nth-child(3) {
-  width: 70px;
-  height: auto;
-  position: relative;
-  float: right;
-  z-index: 7;
-  top: 60px;
-  left: 60px;
-}
-@media (min-width: 767px) {
-  .service__img:nth-child(3) {
-    width: 150px;
-    top: 140px;
+  .service__img-1 {
     left: 50px;
-    margin-bottom: 150px;
+  }
+}
+@media (min-width: 1200px) {
+  .service__img-1 {
+    max-width: 170px;
+  }
+}
+
+.service__img-2 {
+  width: 100%;
+  max-width: 150px;
+  position: absolute;
+  right: -30px;
+}
+@media (min-width: 767px) {
+  .service__img-2 {
+    max-width: 200px;
+    float: right;
+    top: -150px;
+    right: -50px;
+  }
+}
+@media (min-width: 1200px) {
+  .service__img-2 {
+    max-width: 300px;
+    right: -150px;
+    top: -300px;
+  }
+}
+
+.service__img-3 {
+  width: 100%;
+  max-width: 100px;
+  position: absolute;
+  right: 80px;
+  top: 50px;
+}
+@media (min-width: 767px) {
+  .service__img-3 {
+    float: right;
+    top: 0px;
+  }
+}
+@media (min-width: 1200px) {
+  .service__img-3 {
+    max-width: 200px;
+    top: -50px;
+  }
+}
+@media (min-width: 1200px) {
+  .service__img-3 {
+    top: -100px;
+  }
+}
+
+.service__imgs-2-3 {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+@media (min-width: 767px) {
+  .service__imgs-2-3 {
+    float: right;
   }
 }
 
 .service__h1 {
   padding: 5px;
-  margin: 10px 0;
 }
 @media (min-width: 767px) {
   .service__h1 {
-    margin-left: 170px;
     margin-top: 50px;
+  }
+}
+@media (min-width: 992px) {
+  .service__h1 {
+    margin-left: 250px;
+  }
+}
+@media (min-width: 1200px) {
+  .service__h1 {
+    margin-left: 300px;
   }
 }
 
 .service__short-p {
-  padding: 5px 5px 80px 5px;
+  width: 95%;
+  margin: 0 auto;
 }
 @media (min-width: 767px) {
   .service__short-p {
     padding: 0;
-    margin-left: 170px;
+  }
+}
+@media (min-width: 992px) {
+  .service__short-p {
     width: 60%;
+    margin: 0;
+    margin-left: 250px;
+  }
+}
+@media (min-width: 1200px) {
+  .service__short-p {
+    width: 40%;
+    margin-left: 300px;
+  }
+}
+
+.service__under-text {
+  margin-bottom: 250px;
+}
+@media (min-width: 767px) {
+  .service__under-text {
+    margin-bottom: 250px;
+  }
+}
+@media (min-width: 1200px) {
+  .service__under-text {
+    margin-bottom: 300px;
   }
 }
 
 .service__p {
-  padding-bottom: 100px;
-  margin-top: 50px;
+  margin-top: -30px;
 }
 @media (min-width: 767px) {
   .service__p {
-    max-width: 60%;
+    width: 70%;
+    margin-top: 0;
   }
+}
+@media (min-width: 1200px) {
+  .service__p {
+    widht: 60%;
+  }
+}
+
+.service__btn {
+  margin: 40px 0;
 }
 
 .search__background {
@@ -2824,5 +3031,188 @@ textarea:focus, input:focus {
   position: absolute;
   bottom: 0;
   left: 50px;
+}
+
+@media (min-width: 767px) {
+  .services-update__white-container {
+    width: 55%;
+  }
+}
+
+@media (min-width: 767px) {
+  .service__updating--h1 {
+    width: 300px;
+  }
+}
+
+.service__updating--label {
+  margin-bottom: 10px;
+}
+
+.textarea__update {
+  width: 100%;
+  height: 300px;
+}
+@media (min-width: 992px) {
+  .textarea__update {
+    width: 90%;
+  }
+}
+@media (min-width: 1200px) {
+  .textarea__update {
+    width: 70%;
+  }
+}
+
+.textarea__update:focus {
+  border: 0px;
+  border-bottom: 2px solid #000;
+}
+
+.service__updating {
+  margin: 50px 5px;
+}
+
+.updating-input {
+  width: 90%;
+}
+
+.update-submit-container {
+  width: 100%;
+  max-width: 300px;
+  margin: 20px auto;
+  text-align: center;
+}
+.update-submit-container button {
+  width: 100%;
+  max-width: 300px;
+}
+.update-submit-container a {
+  margin: 10px;
+}
+
+@media (min-width: 767px) {
+  .admin__create--h1 {
+    margin-right: 25px;
+  }
+}
+@media (min-width: 1200px) {
+  .admin__create--h1 {
+    margin-right: 50px;
+  }
+}
+
+.admin__create--flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+@media (min-width: 992px) {
+  .admin__create--flex {
+    width: 90%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+@media (min-width: 1200px) {
+  .admin__create--flex {
+    width: 70%;
+  }
+}
+
+.not-found {
+  overflow: hidden;
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.not-found__house-shape {
+  position: absolute;
+  z-index: -1;
+  height: 1000px;
+  width: 1000px;
+  left: -55%;
+  margin-top: 50px;
+  top: 100px;
+}
+@media (min-width: 767px) {
+  .not-found__house-shape {
+    left: -35%;
+  }
+}
+@media (min-width: 992px) {
+  .not-found__house-shape {
+    width: 1500px;
+    heihgt: 1500px;
+    left: -55%;
+  }
+}
+@media (min-width: 1200px) {
+  .not-found__house-shape {
+    left: -35%;
+  }
+}
+
+.not-found__img-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-items: center;
+  position: relative;
+  top: 80px;
+}
+@media (min-width: 767px) {
+  .not-found__img-container {
+    margin-left: 50px;
+  }
+}
+@media (min-width: 992px) {
+  .not-found__img-container {
+    top: 150px;
+    left: 200px;
+  }
+}
+@media (min-width: 1200px) {
+  .not-found__img-container {
+    margin-left: 200px;
+  }
+}
+
+.not-found__img {
+  width: 130px;
+  height: 130px;
+  margin: 30px 10px;
+}
+@media (min-width: 992px) {
+  .not-found__img {
+    width: 220px;
+    height: 220px;
+  }
+}
+
+.not-found__content {
+  width: 100%;
+  max-width: 500px;
+  margin-top: 20px;
+  position: absolute;
+  top: 350px;
+  margin: 0 15px;
+}
+@media (min-width: 992px) {
+  .not-found__content {
+    top: 430px;
+    left: 20px;
+  }
+}
+
+.not-found__p {
+  margin: 10px 0;
 }
 /*# sourceMappingURL=style.css.map */
