--- a/styles/scss/partials/_btn.scss
+++ b/styles/scss/partials/_btn.scss
@@ -152,8 +152,7 @@ button {
     cursor: pointer;
     height: 40px;
     border-radius: 20px;
-    min-width: 10%;
-    max-width: 150px;
+    width: 150px;
     text-align: center;
     display: inline-block;
     position: relative;
