--- a/styles/scss/partials/_global.scss
+++ b/styles/scss/partials/_global.scss
@@ -86,6 +86,11 @@ body {
     transform: translate(-50%, -50%);
 }
 
+.loader-text {
+    position: relative;
+    bottom: 100px;
+}
+
 // Error handler
 .error-components__container {
     position: absolute;
