--- a/styles/scss/style.css
+++ b/styles/scss/style.css
@@ -153,6 +153,11 @@ body .some__img:hover, body .delete:hover {
           transform: translate(-50%, -50%);
 }
 
+.loader-text {
+  position: relative;
+  bottom: 100px;
+}
+
 .error-components__container {
   position: absolute;
   left: 50%;
@@ -1236,8 +1241,7 @@ button {
   cursor: pointer;
   height: 40px;
   border-radius: 20px;
-  min-width: 10%;
-  max-width: 150px;
+  width: 150px;
   text-align: center;
   display: inline-block;
   position: relative;
@@ -1498,6 +1502,70 @@ textarea:focus, input:focus {
   margin: 20px 0 20px 15px;
 }
 
+.form-dropdown {
+  position: relative;
+  width: 90%;
+}
+@media (min-width: 992px) {
+  .form-dropdown {
+    width: 100%;
+  }
+}
+
+.form-dropdown__selected-input {
+  border-bottom: 1px solid #000;
+  padding: 3px;
+  position: relative;
+  margin-top: 10px;
+  cursor: pointer;
+}
+.form-dropdown__selected-input:hover {
+  background-color: #9AC8E4;
+  border-bottom: 2px solid #000;
+}
+
+.form-dropdown__hover {
+  border-bottom: 2px solid #000;
+}
+
+.form-dropdown__invisible-value {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+}
+
+.form-dropdown__options {
+  position: absolute;
+  background-color: #fff;
+  width: 100%;
+  top: 35px;
+  z-index: 10;
+  border: 1px solid #000;
+}
+@media (min-width: 992px) {
+  .form-dropdown__options {
+    width: 120%;
+  }
+}
+.form-dropdown__options ul option {
+  cursor: pointer;
+  padding: 5px 20px;
+  display: block;
+}
+@media (min-width: 992px) {
+  .form-dropdown__options ul option {
+    padding: 5px;
+  }
+}
+.form-dropdown__options ul option:hover {
+  background-color: #9AC8E4;
+}
+
+.form-dropdown__arrow-img {
+  position: absolute;
+  right: 5px;
+}
+
 .login {
   position: relative;
   z-index: 1;
@@ -1545,7 +1613,6 @@ textarea:focus, input:focus {
 
 .login__btn {
   background-color: #F3A451;
-  width: 100%;
 }
 
 .login__btn:hover {
@@ -2513,6 +2580,14 @@ textarea:focus, input:focus {
         -ms-flex-direction: row;
             flex-direction: row;
     margin: 100px auto;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+@media (min-width: 992px) {
+  .about__services {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
 }
 
@@ -2576,14 +2651,25 @@ textarea:focus, input:focus {
   }
 }
 
-.about__gallery--img {
+.about__img-container {
+  position: relative;
   max-width: 40%;
   margin: 10px;
 }
 @media (min-width: 992px) {
-  .about__gallery--img {
+  .about__img-container {
     max-width: 30%;
   }
+}
+
+.about__delete {
+  border: 1px solid #F34150;
+  background-color: #F34150;
+  border-radius: 50%;
+  display: inline-block;
+  height: 30px;
+  position: absolute;
+  bottom: 5px;
 }
 
 .admin__h1 {
@@ -3132,6 +3218,30 @@ textarea:focus, input:focus {
 
 .upload-image_input {
   width: 100%;
+}
+
+@media (min-width: 767px) {
+  .create__white-container {
+    width: 80%;
+    margin-right: 50px;
+  }
+}
+
+.create__heading {
+  margin: 30px 20px;
+}
+
+.create__btn {
+  text-align: center;
+}
+@media (min-width: 767px) {
+  .create__btn {
+    width: 70%;
+  }
+}
+
+.create-input {
+  width: 50%;
 }
 
 .not-found {
