--- a/styles/scss/partials/_index.scss
+++ b/styles/scss/partials/_index.scss
@@ -214,7 +214,7 @@
         }
 
         @include respond-to('large') {
-            margin: 0 50px 50px 50px;
+            margin: 50px 50px;
         }
     }
 
